--- a/poc/mcp-web-app/package.json
+++ b/poc/mcp-web-app/package.json
@@ -8,14 +8,28 @@
     "dist": "electron-builder"
   },
   "devDependencies": {
-    "electron": "^35.1.5",
+    "@modelcontextprotocol/server-brave-search": "^0.6.2",
+    "@modelcontextprotocol/server-everything": "^2025.4.8",
+    "@modelcontextprotocol/server-filesystem": "^2025.3.28",
+    "@modelcontextprotocol/server-gdrive": "^2025.1.14",
+    "@modelcontextprotocol/server-github": "^2025.4.8",
+    "@modelcontextprotocol/server-gitlab": "^2025.4.7",
+    "@modelcontextprotocol/server-google-maps": "^0.6.2",
+    "@modelcontextprotocol/server-memory": "^0.6.2",
+    "@modelcontextprotocol/server-postgres": "^0.6.2",
+    "@modelcontextprotocol/server-puppeteer": "^2025.4.7",
+    "@modelcontextprotocol/server-redis": "^2025.4.7",
+    "@modelcontextprotocol/server-sequential-thinking": "^0.6.2",
+    "@modelcontextprotocol/server-slack": "^2025.1.17",
+    "electron": "^35.2.0",
     "electron-builder": "^24.9.1"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "dotenv": "^16.3.1",
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "axios": "^1.8.4",
+    "cors": "^2.8.5",
+    "cross-spawn": "^7.0.6",
+    "dotenv": "^16.5.0",
+    "express": "^4.19.2"
   },
   "build": {
     "appId": "com.mcp.webapp",
