--- a/poc/mcp-web-app/package.json
+++ b/poc/mcp-web-app/package.json
@@ -1,49 +1,36 @@
 {
   "name": "mcp-web-app",
-  "version": "1.0.0",
+  "version": "1.1.0",
+  "description": "Electron desktop wrapper around a single MCP-Filesystem server",
   "main": "main.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "electron .",
+    "dev": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
-  "devDependencies": {
-    "@modelcontextprotocol/server-brave-search": "^0.6.2",
-    "@modelcontextprotocol/server-everything": "^2025.4.8",
-    "@modelcontextprotocol/server-filesystem": "^2025.3.28",
-    "@modelcontextprotocol/server-gdrive": "^2025.1.14",
-    "@modelcontextprotocol/server-github": "^2025.4.8",
-    "@modelcontextprotocol/server-gitlab": "^2025.4.7",
-    "@modelcontextprotocol/server-google-maps": "^0.6.2",
-    "@modelcontextprotocol/server-memory": "^0.6.2",
-    "@modelcontextprotocol/server-postgres": "^0.6.2",
-    "@modelcontextprotocol/server-puppeteer": "^2025.4.7",
-    "@modelcontextprotocol/server-redis": "^2025.4.7",
-    "@modelcontextprotocol/server-sequential-thinking": "^0.6.2",
-    "@modelcontextprotocol/server-slack": "^2025.1.17",
-    "electron": "^35.2.0",
-    "electron-builder": "^24.9.1"
-  },
   "dependencies": {
+    "@modelcontextprotocol/server-filesystem": "^2025.3.28",
     "axios": "^1.8.4",
-    "cors": "^2.8.5",
     "cross-spawn": "^7.0.6",
     "dotenv": "^16.5.0",
-    "express": "^4.19.2"
+    "electron": "^35.2.0",
+    "portfinder": "^1.0.32",
+    "uuid": "^11.1.0"
   },
   "build": {
     "appId": "com.mcp.webapp",
-    "productName": "MCP Web App",
-    "win": {
-      "target": "nsis"
-    },
-    "directories": {
-      "output": "dist"
-    },
+    "productName": "MCP Desktop",
+    "asarUnpack": [
+      "node_modules/@modelcontextprotocol/server-filesystem/**",
+      "node_modules/.bin/**"
+    ],
     "files": [
-      "**/*",
       "!dist/",
       "!node_modules/.cache/"
-    ]
+    ],
+    "win": {
+      "target": "nsis"
+    }
   }
 }
